Fixed gap between navbar and search form

--- a/client/src/containers/search/ParkContainer.css
+++ b/client/src/containers/search/ParkContainer.css
@@ -1,5 +1,4 @@
 .park {
-    margin-top: 10px;
     width: 75vw;
 }
 
